--- a/frontend/seguros-app/src/app/features/asegurados/pages/asegurado-create-page/asegurado-create-page.html
+++ b/frontend/seguros-app/src/app/features/asegurados/pages/asegurado-create-page/asegurado-create-page.html
@@ -1,6 +1,6 @@
 <div class="page-container">
   <app-asegurado-form
-    [isLoading]="isLoading"
+    [isLoading]="isLoading()"
     (submitForm)="onSubmit($event)"
     (cancelForm)="onCancel()">
   </app-asegurado-form>
