--- a/frontend/seguros-app/src/app/features/asegurados/pages/asegurado-edit-page/asegurado-edit-page.html
+++ b/frontend/seguros-app/src/app/features/asegurados/pages/asegurado-edit-page/asegurado-edit-page.html
@@ -1,13 +1,13 @@
 <div class="page-container">
-  <div *ngIf="isLoadingData" class="loading-container">
+  <div *ngIf="isLoadingData()" class="loading-container">
     <mat-spinner></mat-spinner>
     <p>Cargando datos...</p>
   </div>
 
   <app-asegurado-form
-    *ngIf="!isLoadingData && asegurado"
-    [asegurado]="asegurado"
-    [isLoading]="isLoading"
+    *ngIf="!isLoadingData() && asegurado()"
+    [asegurado]="asegurado()!"
+    [isLoading]="isLoading()"
     (submitForm)="onSubmit($event)"
     (cancelForm)="onCancel()">
   </app-asegurado-form>
