--- a/frontend/seguros-app/src/app/features/insureds/pages/insured-create-page/insured-create-page.html
+++ b/frontend/seguros-app/src/app/features/insureds/pages/insured-create-page/insured-create-page.html
@@ -1,7 +1,7 @@
 <div class="page-container">
-  <app-asegurado-form
+  <app-insured-form
     [isLoading]="isLoading()"
     (submitForm)="onSubmit($event)"
     (cancelForm)="onCancel()">
-  </app-asegurado-form>
+  </app-insured-form>
 </div>
