--- a/frontend/seguros-app/src/app/features/insureds/components/insureds-list/insureds-list.html
+++ b/frontend/seguros-app/src/app/features/insureds/components/insureds-list/insureds-list.html
@@ -51,71 +51,71 @@
 
       <!-- Tabla de asegurados -->
       <div *ngIf="!isLoading()" class="table-container">
-        <table mat-table [dataSource]="asegurados()" class="mat-elevation-z2">
+        <table mat-table [dataSource]="insureds()" class="mat-elevation-z2">
           
           <!-- Columna: Número de Identificación -->
-          <ng-container matColumnDef="numeroIdentificacion">
+          <ng-container matColumnDef="identificationNumber">
             <th mat-header-cell *matHeaderCellDef>Identificación</th>
-            <td mat-cell *matCellDef="let asegurado">
-              {{ asegurado.numeroIdentificacion }}
+            <td mat-cell *matCellDef="let insured">
+              {{ insured.identificationNumber }}
             </td>
           </ng-container>
 
           <!-- Columna: Nombre Completo -->
-          <ng-container matColumnDef="nombreCompleto">
+          <ng-container matColumnDef="fullName">
             <th mat-header-cell *matHeaderCellDef>Nombre Completo</th>
-            <td mat-cell *matCellDef="let asegurado">
-              {{ getNombreCompleto(asegurado) }}
+            <td mat-cell *matCellDef="let insured">
+              {{ getFullName(insured) }}
             </td>
           </ng-container>
 
           <!-- Columna: Email -->
           <ng-container matColumnDef="email">
             <th mat-header-cell *matHeaderCellDef>Email</th>
-            <td mat-cell *matCellDef="let asegurado">
-              {{ asegurado.email }}
+            <td mat-cell *matCellDef="let insured">
+              {{ insured.email }}
             </td>
           </ng-container>
 
           <!-- Columna: Teléfono -->
-          <ng-container matColumnDef="telefono">
+          <ng-container matColumnDef="phone">
             <th mat-header-cell *matHeaderCellDef>Teléfono</th>
-            <td mat-cell *matCellDef="let asegurado">
-              {{ asegurado.telefonoContacto }}
+            <td mat-cell *matCellDef="let insured">
+              {{ insured.contactPhone }}
             </td>
           </ng-container>
 
           <!-- Columna: Fecha de Nacimiento -->
-          <ng-container matColumnDef="fechaNacimiento">
+          <ng-container matColumnDef="birthDate">
             <th mat-header-cell *matHeaderCellDef>Fecha Nac.</th>
-            <td mat-cell *matCellDef="let asegurado">
-              {{ formatDate(asegurado.fechaNacimiento) }}
+            <td mat-cell *matCellDef="let insured">
+              {{ formatDate(insured.birthDate) }}
             </td>
           </ng-container>
 
           <!-- Columna: Valor Solicitud -->
-          <ng-container matColumnDef="valorSolicitud">
+          <ng-container matColumnDef="requestValue">
             <th mat-header-cell *matHeaderCellDef>Valor Solicitud</th>
-            <td mat-cell *matCellDef="let asegurado">
-              {{ formatCurrency(asegurado.valorEstimadoSolicitud) }}
+            <td mat-cell *matCellDef="let insured">
+              {{ formatCurrency(insured.estimatedRequestValue) }}
             </td>
           </ng-container>
 
           <!-- Columna: Acciones -->
-          <ng-container matColumnDef="acciones">
+          <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef>Acciones</th>
-            <td mat-cell *matCellDef="let asegurado">
+            <td mat-cell *matCellDef="let insured">
               <button 
                 mat-icon-button 
                 color="primary" 
-                (click)="onEdit(asegurado)"
+                (click)="onEdit(insured)"
                 matTooltip="Editar">
                 <mat-icon>edit</mat-icon>
               </button>
               <button 
                 mat-icon-button 
                 color="warn" 
-                (click)="onDelete(asegurado)"
+                (click)="onDelete(insured)"
                 matTooltip="Eliminar">
                 <mat-icon>delete</mat-icon>
               </button>
